# synctimer

./: .firebaserc  .gitignore  FIRESTORE_SCHEMA.md  README.md  firebase.json  firestore.indexes.json  firestore.rules  package.json  pnpm-workspace.yaml  storage.rules  tsconfig.json
.github/workflows/: firebase-preview-cleanup.yml  firebase-preview.yml  rust.yml
functions/: .eslintrc.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
functions/src/: email.ts  index.ts
functions/test/: storeParts.test.ts
parser/: .gitignore  Cargo.toml  Dockerfile  out.yaml
parser/src/: lib.rs  main.rs
parser/tests/: extra_tests.rs  min_xml.rs  multipart_yaml.rs
parser/tests/fixtures/: min.xml  multipart.xml
scripts/: seedFirestore.ts
web/: .env  ParseWizard.tsx  eslint.config.js  jest.config.cjs  package.json  pnpm-lock.yaml  tsconfig.test.json  vite.config.ts
web/.github/workflows/: firebase-preview.yml
web/parser/: Cargo.toml
web/src/: App.tsx  glass-overrides.css  index.css  main.tsx  react-avatar-editor.d.ts  vite-env.d.ts
web/src/components/: Account.tsx  AssignmentModal.tsx  AuthPage.tsx  Contacts.tsx  ContactsOld.tsx  Devices.tsx  Explore.tsx  Files.tsx  GroupDetail.tsx  Groups.tsx  Home.tsx  LinkDeviceModal.tsx  LinkPhone.tsx  MainContent.tsx  MyFiles.tsx  NotificationsBell.tsx  PageAnimator.tsx  ParseWizard.tsx  PrivateRoute.tsx  ProtectedRoute.tsx  ReshareModal.tsx  SendFileModal.tsx  SendFilesModal.tsx  SentFiles.tsx  Settings.tsx  (+4 more)
web/test/: AssignmentModal.test.tsx  ContactsRemove.test.tsx  Files.test.tsx  GroupsInvites.test.tsx
(+17 files in other folders)
