[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
quick-xml = "0.38.0"
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_yaml = "0.9.34"
