[package]
name = "parser"
version = "0.1.0"
edition = "2021"          # ← required for async/await

[dependencies]
anyhow     = "1.0"
clap       = { version = "4", features = ["derive"] }
quick-xml  = "0.38"
serde      = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
warp       = "0.3"        # HTTP server
tokio      = { version = "1", features = ["full"] }
bytes = "1"
roxmltree = "0.20.0"
